Add a super dumb ResolvedRoute

--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "mocha": "^4.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
     "react-test-renderer": "^16.2.0"
   }
 }
