--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-redux-resolved-route",
   "version": "0.1.0",
   "description": "Route to ensure that components have what they need before they're rendered",
-  "main": "index.js",
+  "main": "dist/ResolvedRoute.js",
   "scripts": {
     "build": "babel src --out-dir dist",
     "lint": "eslint src test",
